customised narrative and updated narrative titles

--- a/src/course/en/components.json
+++ b/src/course/en/components.json
@@ -487,7 +487,7 @@
             }
          },
          {
-            "title": "Communicate with other road users",
+            "title": "<h3>Role 4: Ride Safely and Responsibly in the Traffic System - How to share the road with others</h3>Element 4.1.1: Communicate with other road users</h3>",
             "body": "<p>More complex road environments require the ability and confidence to ride and share the road safely and responsibly with other road users.</p><p>The first Element covers the skill to be able to communicate effectively with other road users using a routine.</p>",
             "strapline": "Communicate with other road users",
             "_graphic": {
@@ -496,7 +496,7 @@
             }
          },
          {
-            "title": "Cooperate with and respect other road users",
+            "title": "Element 4.1.2: Cooperate with and respect other road users",
             "body": "<p>Element 4.1.2 covers the ability to interact with other road users in a variety of different settings and scenarios.</p><p class='narrative-quote'>\u201CYou cycle with a positive and collaborative approach to sharing the road. Through actively and positively interacting with other road users, you help to contribute to a co-operative culture.\u201D</p><p class='quote-ann'>(Cycle Training Delivery Guide, p. 15) </p>",
             "strapline": "Cooperate with and respect other road users",
             "_graphic": {
@@ -505,7 +505,7 @@
             }
          },
          {
-            "title": "Identify and respond to hazards",
+            "title": "Element 4.2.1: Identify and respond to hazards",
             "body": "<p>The ability to deal with hazards is covered in Element 4.2.1, including being able to continually scan the cycling environment and anticipate, evaluate and appropriately respond to possible hazards.</p><p class='narrative-quote'>\u201CWhether you\u2019re riding in the park, on a segregated cycle lane or on the road, you are sharing space with others. This means being aware of your surroundings and co-operating with those around you. Staying aware and alert enables you to identify and respond to hazards and the actions of others. It lets you anticipate potential problems before they even take place.\u201D</p><p class='quote-ann'>(Ride Guide, p. 23)</p>",
             "strapline": "Identify and respond to hazards",
             "_graphic": {
@@ -514,7 +514,7 @@
             }
          },
          {
-            "title": "Ride assertively",
+            "title": "Element 4.2.2: Ride assertively",
             "body": "<p>Riding assertively is especially important to advanced on-road training. You\u2019ll help riders to use primary position in new and busy environments, remaining calm as they interact with more people on their journey.</p><p>Two important points in Element 4.2.2 relate to this:<ul><li>being able to <strong>create and maintain a safe riding space</strong>, through scanning the space ahead and behind and by positioning yourself for maximum visibility to others</li><li><strong>managing your physical and emotional state</strong> when cycling</li></ul></p>",
             "strapline": "Ride assertively",
             "_graphic": {
